# Electrochemical-Dev-Kit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
cicd/: build_demo.sh  build_tests.sh  config.sh  prepare_artifacts.sh  run_tests.sh  setup.sh  update_latest_tag.sh
demo/: CMakeLists.txt  main.c
dev/: format.sh
src/: CMakeLists.txt  electrochemical.h  electrochemical_dev_kit.h
src/config/: electrochemical_config.h
src/cv/: electrochemical_dev_kit_cv.c  electrochemical_dev_kit_cv.h
src/dpv/: electrochemical_dev_kit_dpv.c  electrochemical_dev_kit_dpv.h
src/ramp/: CMakeLists.txt  electrochemical_dev_kit_ramp.c  electrochemical_dev_kit_ramp.h
src/utils/: CMakeLists.txt  electrochemical_cv.h  electrochemical_dpv.h  electrochemical_ramp.h
tests/: CMakeLists.txt  main.c
